XP-3206 HTML Area - Toolbar buttons are incorrectly positioned - Made toolbar buttons to be left aligned in non-live edit html areas - Fixed problem with active toolbar width on resize - removed calls to updateEditorToolbarWidth(), which seems useless to me

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/util/htmlarea/html-editor.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/util/htmlarea/html-editor.less
@@ -54,10 +54,6 @@
   display: flex;
   background-color: @admin-white;
 
-  .mce-flow-layout {
-    text-align: center;
-  }
-
   .mce-btn-group {
     border-right: 1px solid @admin-medium-gray-border;
     .mce-menubtn, .mce-btn, .mce-first, .mce-last, .mce-first.mce-last {
